--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ header{
 .nav-item.active{
     color:white;
     opacity:1;
-    font-weight:500;
+    font-width:500;
 }
 .right-cont svg, .right-cont img{
     margin-right:22px;
@@ -72,7 +72,7 @@ header{
 }
 .movies-section-heading{
     font-size:20px;
-    font-weight:700;
+    font-width:700;
     line-height:1.2;
     color:white;
     cursor: pointer;
@@ -113,6 +113,7 @@ header{
     background-repeat: no-repeat;
     background-size:cover;
     min-height:89vh;
+    padding-top: 60px;
     position:relative;
 }
 .banner-content{
@@ -135,14 +136,15 @@ header{
     color: white;
     margin-bottom:14px;
     font-size:22px;
-    font-weight:700;
+    font-width:700;
+    /* font-width:700; */
     line-height:1.5;
 }
 .banner-overview{
     font-size:16.4px;
     color:white;
     line-height:1.3;
-    max-weight:40%;
+    max-width:40%;
 }
 .action-buttons-cont{
     display:flex;
@@ -158,7 +160,7 @@ header{
     align-items:center;
     flex-direction:row;
     font-size:16px;
-    font-weight:700;
+    font-width:700;
     cursor:pointer;
 }
 .action-button:last-child{
